<com.chenney.smsforward.ui.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chenney.smsforward.forward.ForwardActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/tasksContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/tasksLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/filteringLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/list_item_padding"
                android:layout_marginRight="@dimen/list_item_padding"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                android:id="@+id/phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_tasks_all"
                android:layout_marginBottom="@dimen/list_item_padding" />
            <CheckBox
                android:enabled="false"
                android:id="@+id/unread_phone_ck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_read_phone_label"/>
            <CheckBox
                android:enabled="false"
                android:id="@+id/unread_sms_ck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_read_sms_label"/>
            <CheckBox
                android:enabled="false"
                android:id="@+id/battery_ck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_label"/>

            <Button
                android:id="@+id/send_button"
                android:text="@string/start_send_label"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/noTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/noTasksIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_assignment_turned_in_24dp" />

            <TextView
                android:id="@+id/noTasksMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_tasks_all"
                android:layout_marginBottom="@dimen/list_item_padding" />

            <TextView
                android:id="@+id/noTasksAdd"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/touch_feedback"
                android:gravity="center"
                android:text="@string/no_tasks_add" />

        </LinearLayout>
    </RelativeLayout>
</com.chenney.smsforward.ui.ScrollChildSwipeRefreshLayout>
